arreglos servidor y cliente java funcionando ok

--- a/grpc-java-lab/grpc-java-server/pom.xml
+++ b/grpc-java-lab/grpc-java-server/pom.xml
@@ -19,16 +19,16 @@
 
     <dependencies>
 
-        <!-- Spring Boot -->
+        <!-- Spring Boot base -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <!-- Spring Boot gRPC server -->
+        <!-- gRPC server starter -->
         <dependency>
-            <groupId>org.springframework.grpc</groupId>
-            <artifactId>spring-grpc-server-web-spring-boot-starter</artifactId>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-server-spring-boot-starter</artifactId>
         </dependency>
 
         <!-- Stubs generados desde los .proto -->
@@ -41,6 +41,12 @@
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
