--- a/grpc-java-lab/pom.xml
+++ b/grpc-java-lab/pom.xml
@@ -14,9 +14,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Dependencias comunes -->
-        <grpc.version>1.72.0</grpc.version>
+        <grpc.version>1.57.2</grpc.version>
         <protobuf.version>4.30.2</protobuf.version>
-        <spring-grpc.version>0.9.0</spring-grpc.version>
+        <grpc.spring.boot.starter.version>2.15.0.RELEASE</grpc.spring.boot.starter.version>
     </properties>
 
     <modules>
@@ -38,15 +38,34 @@
                 <scope>import</scope>
             </dependency>
 
-            <!-- dependencias grpc -->
+            <!-- dependencias gRPC base -->
             <dependency>
-                <groupId>org.springframework.grpc</groupId>
-                <artifactId>spring-grpc-dependencies</artifactId>
-                <version>${spring-grpc.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>${protobuf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-protobuf</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-stub</artifactId>
+                <version>${grpc.version}</version>
             </dependency>
 
+            <!-- dependencias grpc server client-->
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-server-spring-boot-starter</artifactId>
+                <version>${grpc.spring.boot.starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-client-spring-boot-starter</artifactId>
+                <version>${grpc.spring.boot.starter.version}</version>
+            </dependency>
 
             <!-- otras dependencias comunes -->
             <dependency>
