--- a/grpc-java-lab/grpc-java-api/.gitignore
+++ b/grpc-java-lab/grpc-java-api/.gitignore
@@ -2,6 +2,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+.env
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
@@ -31,8 +32,14 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
-.vscode/
+### VisualStudioCode ###
+!.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.factorypath
 
 ### Mac OS ###
 .DS_Store
