--- a/grpc-java-lab/grpc-java-server/src/main/resources/application.yml
+++ b/grpc-java-lab/grpc-java-server/src/main/resources/application.yml
@@ -4,8 +4,11 @@ server:
 grpc:
   server:
     port: ${GRPC_SERVER_PORT:9091}
-    security:
-      enabled: false
+
+spring:
+  threads:
+    virtual:
+      enabled: true
 
 logging:
   level:
