--- a/grpc-java-lab/grpc-java-server/.env.template
+++ b/grpc-java-lab/grpc-java-server/.env.template
@@ -1,3 +1,6 @@
 HTTP_SERVER_PORT=8081
 GRPC_SERVER_PORT=9091
+DATABASE_URL=jdbc:postgresql://localhost:5432/grpcjavalab
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
 LOG_APP=DEBUG
