--- a/grpc-java-lab/grpc-java-server/src/main/resources/application.yml
+++ b/grpc-java-lab/grpc-java-server/src/main/resources/application.yml
@@ -6,6 +6,21 @@ grpc:
     port: ${GRPC_SERVER_PORT:9091}
 
 spring:
+  application:
+    name: grpc-java-server
+  datasource:
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 5
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+  jdbc:
+    template:
+      query-timeout: 30
   threads:
     virtual:
       enabled: true
